After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692210 - miner-manager: plug some memleaks
miner-manager: plug some memleaks
Status: RESOLVED FIXED
Product: tracker
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: tracker-general
Depends on:
Blocks:
 
 
Reported: 2013-01-21 16:40 UTC by Cosimo Cecchi
Modified: 2013-01-21 16:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
miner-manager: plug some memleaks (967 bytes, patch)
2013-01-21 16:40 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2013-01-21 16:40:00 UTC
See attached patch
Comment 1 Cosimo Cecchi 2013-01-21 16:40:02 UTC
Created attachment 234024 [details] [review]
miner-manager: plug some memleaks
Comment 2 Aleksander Morgado 2013-01-21 16:43:03 UTC
Review of attachment 234024 [details] [review]:

Tabs vs spaces to indent; apart from that ok to commit.
Comment 3 Cosimo Cecchi 2013-01-21 16:46:40 UTC
Attachment 234024 [details] pushed as e630de1 - miner-manager: plug some memleaks

Thanks, pushed with indentation fixed.