miner-manager: plug some memleaks

https://bugzilla.gnome.org/show_bug.cgi?id=692210